sandbox/output
StringCalTest.java:9: error: cannot find symbol
        int actual = Hiker.answer(null);
                     ^
  symbol:   variable Hiker
  location: class StringCalTest
StringCalTest.java:17: error: cannot find symbol
        int actual = Hiker.answer("1");
                     ^
  symbol:   variable Hiker
  location: class StringCalTest
StringCalTest.java:23: error: cannot find symbol
        int actual = Hiker.answer("2");
                     ^
  symbol:   variable Hiker
  location: class StringCalTest
StringCalTest.java:30: error: cannot find symbol
        int actual = Hiker.answer("1,");
                     ^
  symbol:   variable Hiker
  location: class StringCalTest
StringCalTest.java:36: error: cannot find symbol
        int actual = Hiker.answer("1,2");
                     ^
  symbol:   variable Hiker
  location: class StringCalTest
StringCalTest.java:42: error: cannot find symbol
        int actual = Hiker.answer("1,2,3,4");
                     ^
  symbol:   variable Hiker
  location: class StringCalTest
6 errors
